# DigitalSignalFiltering_newEngine

./: CMakeLists.txt  README.md  Signal_new_engine.py  Signal_view.py  pybind_wrapper.cpp  python-prolog.py  signal_processor_new_prob.pyd
include/: FIR.h  FilterBase.h  IIR.h  My_signal.h  SignalProcessor.h  Summator.h
src/: FIR.cpp  IIR.cpp  My_signal.cpp  SignalProcessor.cpp  Summator.cpp
